test/parallel/forall/task-private-vars/indvar-errors-2.good
indvar-errors-2.chpl:8: In function 'main':
indvar-errors-2.chpl:10: error: the initialization or type expression of the task-private variable 'tpv1' references the forall loop induction variable 'idx1'
indvar-errors-2.chpl:11: error: the initialization or type expression of the task-private variable 'tpv2' references the forall loop induction variable 'idx2'
indvar-errors-2.chpl:12: error: the initialization or type expression of the task-private variable 'tpv3' references the forall loop induction variable 'idx3'
